Fix header picture overlapping text on smaller resolution screens

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -20,6 +20,7 @@
   font-size: 60px;
   line-height: 72px;
   letter-spacing: -0.6px;
+  z-index: 1;
 }
 
 .header__span-accent {
@@ -38,6 +39,7 @@
   line-height: 30px;
   margin-top: 28px;
   margin-bottom: 0;
+  z-index: 1;
 }
 
 .header__image {
